--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,26 @@
 alembic==1.6.5
+certifi==2021.5.30
+charset-normalizer==2.0.4
 click==8.0.1
 Flask==2.0.1
+Flask-Login==0.5.0
 Flask-Migrate==2.6.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
 greenlet==1.1.1
+idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
 Mako==1.1.4
 MarkupSafe==2.0.1
+mysql-connector-python==8.0.26
+protobuf==3.17.3
 python-dateutil==2.8.2
 python-editor==1.0.4
+requests==2.26.0
 six==1.16.0
 SQLAlchemy==1.4.22
+urllib3==1.26.6
 Werkzeug==2.0.1
 WTForms==2.3.3
