--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 alembic==1.6.5
+bcrypt==3.2.0
+Bcrypt-Flask==1.0.2
 certifi==2021.5.30
+cffi==1.14.6
 charset-normalizer==2.0.4
 click==8.0.1
 Flask==2.0.1
@@ -16,6 +19,7 @@ Mako==1.1.4
 MarkupSafe==2.0.1
 mysql-connector-python==8.0.26
 protobuf==3.17.3
+pycparser==2.20
 python-dateutil==2.8.2
 python-editor==1.0.4
 requests==2.26.0
