--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ mysql-connector-python==8.0.26
 protobuf==3.17.3
 pycparser==2.20
 python-dateutil==2.8.2
+python-dotenv==0.19.1
 python-editor==1.0.4
 requests==2.26.0
 six==1.16.0
